--- a/students.html
+++ b/students.html
@@ -24,8 +24,9 @@
   <section id="current">
     <h2>Current Doctoral Students Supervision/Co-Supervision</h2>
     <div class="project">
-      <ul>
-      </ul>
+      <ol>
+
+      </ol>
     </div>
     <!-- Add more projects -->
   </section>
@@ -33,8 +34,29 @@
   <section id="past">
     <h2>Past Doctoral Students Supervision/Co-Supervision</h2>
     <div class="project">
-    <ul>
-    </ul>
+    <ol>
+      <li>Rakeb Mazhar Islam, “Automated Cyber Deception”, 2016- current.</li>
+      <li>Mohiuddin Ahmed, “Distributed Security Analytics”, 2016-current.</li>
+      <li>Ehsan Aghaei, "Automated Vulnerability Analytics and Mitigation: Classification, Prediction and Mitigation", 2017-current </li>
+      <li>Basel Abdeen, “Analytics of Cyber Threat Intelligence”, 2019- current.</li>
+      <li>Moumita Das Purba, “Analytics of Cyber Threat Intelligence”, 2019- current.</li>
+      <li>MD Sajid "Malware Analysis for Cyber Deception", 2017-current</li>
+      <li>Ashotush Dutta, “Autonomous Cyber Defense”, 2015-current (expected Feb 15, 2021).</li>
+      <li>Ghaith Husari, “Analytics and Automation of Cyber Intelligence Information Sharing*”, 2014-2019.</li>
+      <li>Mohamed Alsaleh, “Metrics, Verification and Synthesis of Cyber Resiliency Configuration”, 2011-April 2018.</li>
+      <li>Haadi Jafarian*, “Cyber Agility for Deterrence and Deception”, (Assistant Professor at University of Colorado Denver), 2018.</li>
+      <li>Fida Gilani, “Software-Defined Cyber Agility for Active Cyber Defense”, (Optim), 2017.</li>
+      <li>Mohamed Qasim Ali, “Intrusion Detection and Deterrence for Smart Grids”, (Symantec Labs), 2016.</li>
+      <li>Ashiq Rahman, “Automated Formal Analytics for Smart Grid Security and Resiliency”,  (Assistant Professor at Tennessee Tech Univ), 2010.</li>
+      <li>Yongning Tang, “Overlay Service Monitoring and Fault Diagnosis”, (Illinois State University, Associate Professor), 2008.</li>
+      <li>Lopa Roychoudhuri, “Adaptive End-to-End Quality Control for Real-time Audio Packet Transmission”, (Angelo State University, Texas, Associate Professor) , 2009.</li>
+      <li>Taghrid Samak, “Discovery, Generation and Analysis of Network Policy Configurations”,  (Senior Researcher, Lawrence Berkeley Lab, UCB) , 2010..</li>
+      <li>Adel El-Atawy, “Traffic-aware Techniques for Network Security Applications”, 2010 (Google), 2010..</li>
+      <li>Hazem Hamed, “Verification and Optimization of Firewall Policies”,  (Cisco Systems), 2006.</li>
+      <li>Tao Huang, (Advisor Antony Chung, DePaul University), Topic: “Conformance Testing of Communication Protocols Modeled By Extended Finite Sate Machine”, October 2007.</li>
+      <li>Joe Elarde (advisor: G. Brewster, DePaul University), Thesis: "Performance Management of Web Transactions", May 2006</li>
+    </ol>
+      <i>*approval pending due to committee requested refutation/corrections.</i>
     </div>
     <!-- Add more projects -->
   </section>
@@ -42,7 +64,14 @@
   <section id="committee">
     <h2>Current/Past DOCTORAL Student Co-Supervision and Committee Member</h2>
     <div class="project">
-      
+      <ol>
+        <li>Committee member and Graduate faculty representative for a PhD student (Timothy Kernicky.), Thesis: “Formal Approach for Structure Health Monitoring”, Civil Engineering, UNCC, 2018.</li>
+        <li>Committee member and Graduate faculty representative for a PhD student (Waseem Shadeed), Thesis: “Computational Inverse Mechanics of a Highly Comminuted Tibia Fracture”, Electrical Engineering, UNCC, 2013.</li>
+        <li>Committee member and Graduate faculty representative for a PhD student (Amitangshu Pal), Thesis: “Dynamic Routing with Cross-Layer Adaptations for Multi-hop Wireless Networks”, Electrical Engineering, UNCC, 2010.</li>
+        <li>Subrata Acharya (advisor: Ty Znati, University of  Pittsburgh), Thesis: “Dynamic Traffic Driven Architectures and Algorithms for Securing Networks”, , External Committee Member, September 2007.</li>
+        <li>Manigandan Radhakrishnan (advisor: John Solworth, University of Illinois at Chicago), Thesis: "Toward Security Kernel Support”, External Committee Member , March 2007.</li>
+        <li>Muhammad Nadzir Marsono (advisor: Fayez Gebali, University of Victoria, Canada), Thesis: “Towards Improving E-mail Content Classification for Spam Control: Architecture, Abstraction, and Strategies”,  August 2007.</li>
+      </ol>
     </div>
   
   <footer>
