--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <!-- Navigation Bar -->
 <nav class="custom-navbar">
   <a href="#biography">Biography</a>
-  <a href="#publications">Publications</a>
+  <a href="#publications.html">Publications</a>
   <a href="#honors">Honors</a>
   <a href="#accomplishments">Accomplishments</a>
   <a href="projects.html" target="_blank">Projects & Tools</a>
