--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <!-- Navigation Bar -->
 <nav class="custom-navbar">
   <a href="#biography">Biography</a>
-  <a href="#publications.html">Publications</a>
+  <a href="publications.html">Publications</a>
   <a href="#honors">Honors</a>
   <a href="#accomplishments">Accomplishments</a>
   <a href="projects.html" target="_blank">Projects & Tools</a>
@@ -82,16 +82,6 @@
     <h2>Research</h2>
     <p>Research interests include cybersecurity analytics, automation, formal verification, SDN/IoT security, and cyber defense strategies.</p>
   </section>
-
-  <section id="publications">
-  <h2>Publications</h2>
-  <form onsubmit="searchGoogleScholar(); return false;">
-    <input type="text" placeholder="Filter by keyword..." id="keyword">
-    <button type="submit">Search</button>
-  </form>
-  <p>Publications available via <a href="https://scholar.google.com" target="_blank">Google Scholar</a>.</p>
-</section>
-
 
   <section id="honors">
     <h2>Honors and Recognition</h2>
