--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <nav class="custom-navbar">
   <a href="#biography">Biography</a>
   <a href="publications.html">Publications</a>
-  <a href="#honors">Honors</a>
+  <a href="honors.html">Honors and Recognition</a>
   <a href="#accomplishments">Accomplishments</a>
   <a href="projects.html" target="_blank">Projects & Tools</a>
   <a href="talks.html" target="_blank">Invited Talks & Panels</a>
@@ -81,18 +81,6 @@
   <section id="research">
     <h2>Research</h2>
     <p>Research interests include cybersecurity analytics, automation, formal verification, SDN/IoT security, and cyber defense strategies.</p>
-  </section>
-
-  <section id="honors">
-    <h2>Honors and Recognition</h2>
-    <ul>
-      <li>Featured as DoD Subject Matter Expert in Cybersecurity Configuration Analytics and Automation, 2011.</li>
-      <li>Received IBM Research Faculty Award, 2013.</li>
-      <li>Faculty Research University Award at UNC Charlotte, 2014.</li>
-      <li>ACM and IEEE Distinguished Service Professional Awards (multiple years).</li>
-      <li>Old Dominion University Distinguished Alumni Award, 2003.</li>
-      <li>NASA Scholarship during PhD, 1995–1998.</li>
-    </ul>
   </section>
 
   <section id="accomplishments">
