--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <a href="#biography">Biography</a>
   <a href="publications.html">Publications</a>
   <a href="honors.html">Honors and Recognition</a>
-  <a href="#accomplishments">Accomplishments</a>
+  <a href="accomplishments.html">Accomplishments</a>
   <a href="projects.html" target="_blank">Projects & Tools</a>
   <a href="talks.html" target="_blank">Invited Talks & Panels</a>
   <a href="services.html" target="_blank">Professional Services</a>
@@ -81,18 +81,6 @@
   <section id="research">
     <h2>Research</h2>
     <p>Research interests include cybersecurity analytics, automation, formal verification, SDN/IoT security, and cyber defense strategies.</p>
-  </section>
-
-  <section id="accomplishments">
-    <h2>Accomplishment Highlights</h2>
-    <ul>
-      <li>Published 9 books and 230+ refereed publications.</li>
-      <li>Three patents and many technology transfer projects.</li>
-      <li>Founding PI for two major NSF centers at UNCC.</li>
-      <li>Secured ~$20M research funding; PI for $11M of it.</li>
-      <li>Led projects with AFRL, Cisco, Intel, Duke Energy, etc.</li>
-      <li>Graduated 14 PhD students; 6 are tenure-track professors.</li>
-    </ul>
   </section>
 
   <footer>
