--- a/honors.html
+++ b/honors.html
@@ -32,3 +32,4 @@
       <li>Old Dominion University Distinguished Alumni Award, 2003.</li>
       <li>NASA Scholarship during PhD, 1995–1998.</li>
     </ul>
+  </section>
