--- a/publications.html
+++ b/publications.html
@@ -49,20 +49,24 @@
   </nav>
 
 
-  <!-- Section 1: Direct Links -->
-  <section id="all-publications">
-    <h2>Find All Publications</h2>
-    <p>Click on any icon to view all publications:</p>
+<!-- Section 1: Direct Links -->
+<section id="all-publications">
+  <h2>Find All Publications</h2>
+  <p>Click on any icon to view all publications:</p>
+  
+  <div class="publication-icons">
     <a href="https://scholar.google.com/citations?user=3ewd8VwAAAAJ" target="_blank">
-      <img src="googleScholar.png" alt="Google Scholar" width="50">
+      <img src="googleScholar.png" alt="Google Scholar">
     </a>
     <a href="https://dl.acm.org/profile/81339487878" target="_blank">
-      <img src="acmDL.png" alt="ACM" width="50">
+      <img src="acmDL.png" alt="ACM">
     </a>
     <a href="https://ieeexplore.ieee.org/author/38529167200" target="_blank">
-      <img src="ieee.png" alt="IEEE" width="50">
+      <img src="ieee.png" alt="IEEE">
     </a>
-  </section>
+  </div>
+</section>
+
 
   <hr>
 
