--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
   <a href="publications.html">Publications</a>
   <a href="honors.html">Honors and Recognition</a>
   <a href="accomplishments.html">Accomplishments</a>
-  <a href="projects.html" target="_blank">Projects & Tools</a>
-  <a href="talks.html" target="_blank">Invited Talks & Panels</a>
-  <a href="services.html" target="_blank">Professional Services</a>
-  <a href="students.html" target="_blank">Students & Supervision</a>
+  <a href="projects.html">Projects & Tools</a>
+  <a href="talks.html">Invited Talks & Panels</a>
+  <a href="services.html">Professional Services</a>
+  <a href="students.html">Students & Supervision</a>
 </nav>
 
 
