--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <nav class="custom-navbar">
   <a href="#biography">Biography</a>
   <a href="publications.html">Publications</a>
-  <a href="honors.html">Honors and Recognition</a>
+  <a href="honors.html">Honors & Recognition</a>
   <a href="accomplishments.html">Accomplishments</a>
   <a href="projects.html">Projects & Tools</a>
   <a href="talks.html">Invited Talks & Panels</a>
