--- a/publications.html
+++ b/publications.html
@@ -46,6 +46,9 @@
   <!-- Navigation Bar -->
   <nav class="custom-navbar">
     <a href="index.html">Back to Main Page</a>
+    <a href="#all-publications">All Publications</a>
+    <a href="#by-theme">Find By Theme</a>
+    <a href="#by-topic">Find By Topic</a>
   </nav>
 
 
