--- a/students.html
+++ b/students.html
@@ -14,21 +14,12 @@
   <!-- Projects Navigation Bar -->
   <nav class="custom-navbar">
     <a href="index.html">Back to Main Page</a>
-    <a href="#current">Current Doctoral Students Supervision/Co-Supervision</a>
     <a href="#past">Past Doctoral Students Supervision/Co-Supervision</a>
     <a href="#committee">Past DOCTORAL Student Co-Supervision and Committee Member</a>
   </nav>
 
   <!-- Projects Sections -->
 
-  <section id="current">
-    <h2>Current Doctoral Students Supervision/Co-Supervision</h2>
-    <div class="project">
-      <ol>
-
-      </ol>
-    </div>
-    <!-- Add more projects -->
   </section>
 
   <section id="past">
@@ -62,7 +53,7 @@
   </section>
 
   <section id="committee">
-    <h2>Current/Past DOCTORAL Student Co-Supervision and Committee Member</h2>
+    <h2>Past DOCTORAL Student Co-Supervision and Committee Member</h2>
     <div class="project">
       <ol>
         <li>Committee member and Graduate faculty representative for a PhD student (Timothy Kernicky.), Thesis: “Formal Approach for Structure Health Monitoring”, Civil Engineering, UNCC, 2018.</li>
