--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <a href="accomplishments.html">Accomplishments</a>
   <a href="projects.html">Projects & Tools</a>
   <a href="talks.html">Invited Talks & Panels</a>
-  <a href="services.html">Professional Services</a>
+  <a href="services.html">Professional Services & Technology Transfer</a>
   <a href="students.html">Students & Supervision</a>
 </nav>
 
