--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <a href="#biography">Biography</a>
   <a href="publications.html">Publications</a>
   <a href="honors.html">Honors & Recognition</a>
-  <a href="accomplishments.html">Accomplishments</a>
+  <a href="contributions.html">Contributions</a>
   <a href="projects.html">Projects & Tools</a>
   <a href="talks.html">Invited Talks & Panels</a>
   <a href="services.html">Professional Services & Technology Transfer</a>
