--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
 <!-- Navigation Bar -->
 <nav class="custom-navbar">
   <a href="#biography">Biography</a>
-  <a href="publications.html">Publications</a>
-  <a href="honors.html">Honors & Recognition</a>
   <a href="contributions.html">Contributions</a>
+  <a href="publications.html">Publications</a>
+  <a href="teaching.html">Teaching</a>
+  <a href="honors.html">Honors & Recognition</a>
   <a href="projects.html">Projects & Tools</a>
   <a href="talks.html">Invited Talks & Panels</a>
   <a href="services.html">Professional Services & Technology Transfer</a>
