--- a/contributions.html
+++ b/contributions.html
@@ -29,23 +29,48 @@
   </nav>
 
   
-  <section id="cyber-config">
+  <section>
    <p>
     <b>Ehab Al-Shaer</b> has made numerous pioneering contributions that have significantly advanced the fields of network security, cyber-physical systems, and AI-driven cybersecurity automation.
    </p>
   </section>
 
-  <section>
+  <section id="cyber-config">
     <ul>
       <li><b>Cybersecurity Configuration Verification:</b>
         <p>Dr. Al-Shaer is recognized as one of the early contributors to the field of cybersecurity configuration verification. He was among the first to apply formal methods, including Binary Decision Diagrams (BDD) and Satisfiability Modulo Theories (SMT), to analyze and verify the correctness of network security configurations such as firewalls and IPSec policies. His research helped establish a new direction in formal cybersecurity analysis and has been widely cited, earning best paper awards at leading conferences, including IEEE IM (2003) and INFOCOM (2004). [IM03. INFOCOM04, ….] . These formal models were implemented in various tools for discovering configuration errors and policy weakness and hardening security and resiliency of systems. Examples of these tools include ConfigChecker [ICNP09, JSAC09, TDSC16, JSAC05, INFOCOM04, INFOCOM10], SDNChecker [SafeConfig14], CloudChecker [SCC13-1, SCC13-2], ACDChecker, ActiveSDN, IoTChecker [Comp&Sec17], IOTSAT [CNS16] SensorChecker, and WSNPlanner [CNSM12-2] for cyber systems; And AMIAnalyzer [INFOCOM12] and EMSThreatAnalyzer [ICCPS14,] for smart grids and SCADA systems [TSG13, DSN14]. Professor Al-Shaer’s groundbreaking contributions in this domain have transformed cybersecurity configuration management, ensuring automated, scalable, and provably secure network defenses.</p>
       </li>
+    </ul>
+  </section>
+
+  <section id="dynamic">
+    <ul>
       <li><b>Dynamic Firewall Optimization with Self-Adaptive Policies:</b>
       <p>Dr. Al-Shaer was the first to propose dynamic adaptation of firewall policies based on real-time traffic statistics. His work introduced techniques for optimizing packet filtering by inserting early-reject rules for unwanted traffic and reordering existing rules to reduce processing overhead for legitimate traffic. This research was published in leading venues, including IEEE INFOCOM (2006, 2009), JSAC (2006), AsiaCCS (2006), and IEEE Communications Magazine (2013) [INFOCOM06, INFOCOM09, JSAC06, AsiaCCS06, CommMag13].</p>
       </li>
+    </ul>
+  </section>
+
+  <section id="moving">
+    <ul>
       <li><b>Moving Target Defense for Cyber Deterrence:</b><p>Al-Shaer has contributed foundational research in cyber agility, Moving Target Defense (MTD), and cyber deterrence for both cyber and cyber-physical systems. He pioneered methodologies that enable systems—particularly in smart grids and CPS—to continuously mutate configuration parameters, enhancing resilience and attack deterrence.</p></li>
+    </ul>
+  </section>
+
+  <section id="deception">
+    <ul>
       <li><b>Dynamic Cyber Deception:</b><p>Ehab Al-Shaer has made foundational contributions to automated and adaptive cyber deception. He introduced the <b>Attribution-Temptation-Engagement (ATE) </b> model, which supports AI-driven orchestration of deception strategies tailored to the behavior of advanced threats such as APTs and malware. He also developed <b>symbSODA</b>, a hybrid AI and symbolic execution-based system that analyzes real-world malware to extract API-level attack patterns, map them to MITRE ATT&CK techniques, and generate adaptive deception playbooks. Additional systems developed by Al-Shaer include <b>MoveNet</b>, which dynamically migrates virtual networks to evade reconnaissance and DDoS attacks, and <b>FingerDeceiver</b>, a game-theoretic model designed to exhaust attacker resources with minimal impact on legitimate users. His work has played a key role in advancing modern, proactive deception-based cyber defense.</p></li>
+    </ul>
+  </section>
+
+  <section id="physical">
+    <ul>
       <li><b>Cyber-Physical Security and Resiliency:</b><p>Al-Shaer has made significant contributions to proactive cyber-physical system (CPS) security and resiliency through both formal and data-driven approaches. In collaboration with Duke Energy, he developed tools and techniques to identify misconfigurations, predict unknown attacks, and assess their impact on critical infrastructure components such as Advanced Metering Infrastructure (AMI) and Energy Management Systems (EMS), including Optimal Power Flow, Contingency Analysis, Topology Mapping, and Automatic Generation Control (AGC). His work established formal methods to measure the potential of stealthy coordinated attacks, assess attacker capabilities, quantify both visible and hidden impacts on power systems, and automate threat mitigation planning.</p></li>
+    </ul>
+  </section>
+
+  <section id="ai">
+    <ul>
       <li><b>AI-empowered Cybersecurity:</b><p>Dr. Al-Shaer has pioneered ideas and contribution in developing AI-enabled next-generation cyber defense system, and in advancing AI to better fit the need of cyber defense. His contributions in this domain comes in multiple folds as follows:</p>
         <ul>
           <li><b>AI for Semantics Analytics and Cybersecurity Automation:</b><p>Dr. Al-Shaer has developed innovative AI techniques for extracting cyber threat actions and attack patterns from unstructured sources such as reports, blogs, and threat intelligence feeds, and classifying the extracted actions into MITRE ATT&CK tactics, techniques, and procedures (TTPs) using deep learning and natural language understanding techniques [SMET, TTPDrill]. Dr. Al-Shaer have developed a transformer-based framework (V2W‑BERT) for automatically classifying software vulnerabilities (CVEs) into hierarchical Common Weakness Enumeration (CWE) classes leveraging natural language processing, link prediction, and transfer learning that achieves impressive accurate results. This work earned the <b>Best Application Paper Award</b> at IEEE DSAA 2021. These innovative tools aid security practitioners by automating the translation of unstructured attack or vulnerability data into actionable ATT&CK-based insights. Dr. Al-Shaer co-authored a pioneering study that introduced the use of large language models (LLMs) to automatically extract, enforce, and validate CIS Critical Security Controls by transforming unstructured security guidelines into measurable controls, validation metrics, and implementation steps, significantly reducing manual effort and improving policy compliance at scale.</p></li>
