--- a/index.html
+++ b/index.html
@@ -55,11 +55,39 @@
       </p>
     </div>
 
-    <!-- Right: Books Image -->
-    <div class="profile-right">
-      <img src="ehabBooks.jpg" alt="Dr. Alshaer's Books" class="books-image">
+<!-- Book Section -->
+<!-- Book Section -->
+<section id="books">
+  <h2>Books</h2>
+  <div class="books-grid">
+    <div class="book-item">
+      <a href="book1.pdf" target="_blank">
+        <img src="book1.png" alt="Book 1">
+      </a>
+      <p class="downloads">12,000+ downloads</p>
+    </div>
+    <div class="book-item">
+      <a href="book2.pdf" target="_blank">
+        <img src="book2.png" alt="Book 2">
+      </a>
+      <p class="downloads">9,500+ downloads</p>
+    </div>
+    <div class="book-item">
+      <a href="book3.pdf" target="_blank">
+        <img src="book3.png" alt="Book 3">
+      </a>
+      <p class="downloads">15,300+ downloads</p>
+    </div>
+    <div class="book-item">
+      <a href="book4.pdf" target="_blank">
+        <img src="book4.png" alt="Book 4">
+      </a>
+      <p class="downloads">7,200+ downloads</p>
     </div>
   </div>
+  <p class="downloads-note"><em>As of August 2025</em></p>
+</section>
+
 </section>
 
 
