--- a/index.html
+++ b/index.html
@@ -61,28 +61,28 @@
   <h2>Books</h2>
   <div class="books-grid">
     <div class="book-item">
-      <a href="book1.pdf" target="_blank">
+      <a href="https://link.springer.com/book/10.1007/978-3-319-01433-3" target="_blank">
         <img src="book1.png" alt="Book 1">
       </a>
-      <p class="downloads">12,000+ downloads</p>
+      <p class="downloads">7395 downloads</p>
     </div>
     <div class="book-item">
-      <a href="book2.pdf" target="_blank">
+      <a href="https://link.springer.com/book/10.1007/978-3-319-10371-6" target="_blank">
         <img src="book2.png" alt="Book 2">
       </a>
-      <p class="downloads">9,500+ downloads</p>
+      <p class="downloads">5859 downloads</p>
     </div>
     <div class="book-item">
-      <a href="book3.pdf" target="_blank">
+      <a href="https://link.springer.com/book/10.1007/978-3-319-32871-3" target="_blank">
         <img src="book3.png" alt="Book 3">
       </a>
-      <p class="downloads">15,300+ downloads</p>
+      <p class="downloads">4179 downloads</p>
     </div>
     <div class="book-item">
-      <a href="book4.pdf" target="_blank">
+      <a href="https://link.springer.com/book/10.1007/978-3-030-02110-8" target="_blank">
         <img src="book4.png" alt="Book 4">
       </a>
-      <p class="downloads">7,200+ downloads</p>
+      <p class="downloads">20,000+ downloads</p>
     </div>
   </div>
   <p class="downloads-note"><em>As of August 2025</em></p>
