--- a/index.html
+++ b/index.html
@@ -31,14 +31,17 @@
     <!-- Left: Profile Picture + Icons -->
     <div class="profile-left">
       <img src="profile.jpg" alt="Dr. Ehab Alshaer" class="profile-pic">
-      <div class="icon-links-below">
-        <a href="https://scholar.google.com/citations?user=3ewd8VwAAAAJ&hl=en&oi=aoJ" target="_blank">
-          <img src="googleScholar.png" alt="Google Scholar" class="icon-img-small">
-        </a>
-        <a href="https://dl.acm.org/profile/81339487878" target="_blank">
-          <img src="acmDL.png" alt="ACM DL" class="icon-img-small">
-        </a>
-      </div>
+      <div class="publication-icons">
+  <a href="https://scholar.google.com/citations?user=3ewd8VwAAAAJ" target="_blank">
+    <img src="googleScholar.png" alt="Google Scholar">
+  </a>
+  <a href="https://dl.acm.org/profile/81339487878" target="_blank">
+    <img src="acmDL.png" alt="ACM">
+  </a>
+  <a href="https://ieeexplore.ieee.org/author/38529167200" target="_blank">
+    <img src="ieee.png" alt="IEEE">
+  </a>
+</div>
     </div>
 
     <!-- Middle: Mini Biography -->
@@ -55,7 +58,6 @@
       </p>
     </div>
 
-<!-- Book Section -->
 <!-- Book Section -->
 <section id="books">
   <h2>Books</h2>
