--- a/publications.html
+++ b/publications.html
@@ -25,8 +25,12 @@
     }
   </style>
   <script>
-  function searchGoogleScholarByKeywords(keywordsArray) {
+  function searchGoogleScholarByKeyword(keywords) {
     const author = 'author:"Ehab Alshaer"';
+
+    // Handle both a single keyword string or an array of keywords
+    const keywordsArray = Array.isArray(keywords) ? keywords : [keywords];
+
     const keywordsQuery = keywordsArray.join(' OR ');
     const fullQuery = `${author} (${keywordsQuery})`;
     const encodedQuery = encodeURIComponent(fullQuery);
@@ -34,6 +38,7 @@
     window.open(searchUrl, "_blank");
   }
 </script>
+
 
 </head>
 <body>
