--- a/publications.html
+++ b/publications.html
@@ -26,7 +26,7 @@
   </style>
   <script>
   function searchGoogleScholarByKeyword(keywords) {
-    const author = 'author:"Ehab Alshaer"';
+    const author = 'author:"Ehab Al-Shaer"';
 
     // Handle both a single keyword string or an array of keywords
     const keywordsArray = Array.isArray(keywords) ? keywords : [keywords];
