--- a/talks.html
+++ b/talks.html
@@ -106,7 +106,7 @@
   <section id="tutorial">
     <h2>Tutorial Presentations</h2>
     <div class="project">
-      <pre>
+      <p class="tutorial">
 These tutorials were either invited or selected based on IEEE peer-review process:
 07/2016   “A Tutorial on Moving Target Defense Research”, IIT-Bhubaneswar, India
 07/2016   “A Tutorial on Smart Grid Security and Resiliency Research”,  IIT-Bhubaneswar, India.
@@ -117,7 +117,7 @@ These tutorials were either invited or selected based on IEEE peer-review proces
 12/2006   “Firewall and Security Policy Management”, KFUPM
 05/2005   “Managing Network Security Policies: Firewall and IPSec/VPN”, IEEE IM 2005
 04/2004   “Managing Firewall and Network-Edge Security Policies”, IEEE NOMS 2004.
-</pre>
+</p>
     </div>
     <!-- Add more projects -->
   </section>
