--- a/index.html
+++ b/index.html
@@ -37,13 +37,11 @@
     <div class="profile-text">
       <h1>Dr. Ehab Alshaer</h1>
       <p>
-        Distinguished Research Fellow<br>
-        Institute of Software Research (ISR) and Faculty Member of CyLab,<br>
-        School of Computer Science<br>
-        Carnegie Mellon University<br><br>
-        Office: TCS Building, Office# 423, Pittsburgh, PA<br>
-        Office Phone: (412) 268-7899<br>
-        Email: <a href="mailto:ehab@cmu.edu">ehab@cmu.edu</a>
+        Distinguished Research Fellow
+        S3D and Faculty Member of CyLab,
+        School of Computer Science
+        Carnegie Mellon University
+        Email: <a href="mailto:ehab@cmu.edu">ehab@cmu.edu</a> / <a href="mailto:ehab.alshaer@gmail.com">ehab.alshaer@gmail.com</a> 
       </p>
     </div>
 
