--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <!-- Middle: Mini Biography -->
     <div class="profile-text">
       <h1>Dr. Ehab Alshaer</h1>
-      <p class="tutorial">
+      <p class="newline">
         Distinguished Research Fellow
         S3D and Faculty Member of CyLab,
         School of Computer Science
