--- a/talks.html
+++ b/talks.html
@@ -103,7 +103,7 @@
     <!-- Add more projects -->
   </section>
 
-  <section id="tutorial">
+  <section id="newline">
     <h2>Tutorial Presentations</h2>
     <div class="project">
       <p class="tutorial">
