--- a/talks.html
+++ b/talks.html
@@ -106,7 +106,7 @@
   <section id="newline">
     <h2>Tutorial Presentations</h2>
     <div class="project">
-      <p class="tutorial">
+      <p class="newline">
 These tutorials were either invited or selected based on IEEE peer-review process:
 07/2016   “A Tutorial on Moving Target Defense Research”, IIT-Bhubaneswar, India
 07/2016   “A Tutorial on Smart Grid Security and Resiliency Research”,  IIT-Bhubaneswar, India.
