--- a/index.html
+++ b/index.html
@@ -84,16 +84,12 @@
 
   <section id="biography">
     <h2>Biography</h2>
-    <p>Dr. Al-Shaer is a Distinguished Research Fellow at Institute of Software Research (ISR) in the School of Computer Science and Faculty Member of CyLab at Carnegie Mellon University. Dr. Al-Shaer has more than two decades as a researcher and educator in the field of Cybersecurity. Prior to joining ISR/CMU, Prof. Al-Shaer was a Distinguished Career Professor at the Information Networking Institute (INI) at Carnegie Mellon University and was a Professor and the Founding Director of CyberDNA and NSF Cybersecurity Analytics and Automation (CCAA) centers at the University of North Carolina Charlotte from 2009–2020.</p>
-    <p>His research expertise includes:
-    <ol>
-      <li>Formal methods for security configuration verification, synthesis and hardening of enterprise, SDN, IoT and smart grid systems.</li>
-      <li>Adaptive & automated cyber defense.</li>
-      <li>Cyber and cyber-physical resilience.</li>
-      <li>Data-driven cybersecurity analytics.</li>
-      <li>Cyber agility for attack deterrence and deception.</li>
-    </ol></p>
-    <p>Dr. Al-Shaer has published over 200 refereed papers, edited 9+ books/chapters, and graduated 14 PhD students. He was designated a DoD SME in 2011, awarded IBM Faculty Award in 2012 and UNC Charlotte Faculty Research Award in 2013. He has received over $20M in funding from agencies and industry partners.</p>
+    <p><b>Ehab Al-Shaer</b> is an academic professor and entrepreneur known for his pioneering work in cybersecurity analytics, automation, and configuration verification. He has served as a Distinguished Career Professor in the College of Engineering and a Distinguished Research Fellow in the School of Computer Science at Carnegie Mellon University. In 2011, he was designated a Subject Matter Expert (SME) in Cybersecurity Analytics and Automation. He is also the founder and former director (2011–2019) of the National Science Foundation Center on Cybersecurity Analytics and Automation (CCAA).</p>
+    <p>Al-Shaer is recognized for his groundbreaking contributions to the formal modeling of firewall configurations for verification and optimization, mutable networks for moving target defense, and AI-driven autonomous cyber defense agents for dynamic cyber deception and response. He has edited nine books, published over 300 refereed journal and conference articles, and supervised more than sixteen Ph.D. graduates in the field of cybersecurity.  He also has several accepted and submitted patents.</p>
+    <p>Al-Shaer was recognized as a Department of Defense Subject Matter Expert (SME) in cybersecurity analytics and automation in 2011. He received the IBM Faculty Award in 2012 and the UNC Charlotte Faculty Research Award in 2013. Earlier in his career, he received the Distinguished Alumni Award from Old Dominion University in 2003 and a NASA scholarship between 1995 and 1998.</p>
+    <p>Throughout his career, Dr. Al-Shaer has received more than $30M of research funding from both government agencies and industry, in the area of AI-empowered and formal-driven cybersecurity.  </p>
+    <p> He received many Best Paper Awards at conferences, including IEEE DSAA (2021) and DBSec (2023). Al-Shaer has served as a speaker and panelist at IEEE NOMS, ACM MTD, ACM SACMAT, SINET, and other conferences and was invited to brief the White House Office of Science and Technology Policy in 2014. </p>
+    <p>As an advisory board member, founder, and Chief R&D Officer of multiple startups, as well as co-Principal Investigator (co-PI) on several SBIR grants, he has successfully translated advanced academic research into practical, impactful platforms. His work effectively bridges the gap between theoretical concepts and real-world operational tools, significantly advancing cybersecurity.</p>
   </section>
 
   <section id="research">
