--- a/teaching.html
+++ b/teaching.html
@@ -20,15 +20,45 @@
   <!-- Navigation Bar -->
   <nav class="custom-navbar">
     <a href="index.html">Back to Main Page</a>
+    <a href="#cmu">CMU Courses</a>
+    <a href="#unc">UNC Charlotte Courses</a>
+    <a href="#depaul">DePaul University Courses</a>
   </nav>
 
   
- <section>
-   <h3>Current Courses @ CMU</h3>
+ <section id="cmu">
+   <h3>CMU Courses (2020-current)</h3>
    <ul>
-     <li>17-331/631: Information Security, Privacy & Policy</li>
-     <li>14-736: INSuRE: Cybersecurity Research</li>
-     <li>14-810: Network Security Engineering: Analytics and Automation</li>
-     <li>14-760: Advanced Networking</li>
+     <li>17-765: Deep Reinforcement Learning for Autonomous Self-Adaptive Systems.</li>
+     <li>17-631: Information Security, Privacy & Policy (co-teach with Norman Sadeh).</li>
+     <li>14-760: Advanced Networking.</li>
+     <li>14-990: Network Security Engineering- Analytics & Automation</li>
+     <li>14-850: INSuRE Cybersecurity Research.</li>
    </ul>
+ </section>
+
+   <section id="unc">
+   <h3>UNC Charlotte Courses (2009-2020)</h3>
+      <p class="newline">
+ITIS 6010/8010 Cyber Defense Automation.
+ITCS 8110 Introduction to Computing and Information Systems Research
+ITIS 8010 Special Topics on Cybersecurity Configuration Analytics
+ITIS 6167/8167 Network and Information Security.
+ITIS 6230/8230 Cyber Risk for Infrastructure Protection.
+ITIS 6200/8200 Introduction to Information and System Security.
+      </p>
+ </section>
+
+
+     <section id="depaul">
+   <h3>DePaul University Courses (1998-2009)</h3>
+      <p class="newline">
+TDC477: Network Security I
+TDC577/572: Network Security II 
+TDC588: Advanced Network Defense Systems 
+TDC573: Multimedia Networking 
+TDC561: Network Programming
+TDC562: Network Design and Performance Analysis
+TDC568: Network Management
+      </p>
  </section>
