--- a/teaching.html
+++ b/teaching.html
@@ -28,13 +28,17 @@
   
  <section id="cmu">
    <h3>CMU Courses (2020-current)</h3>
-   <ul>
-     <li>17-765: Deep Reinforcement Learning for Autonomous Self-Adaptive Systems.</li>
-     <li>17-631: Information Security, Privacy & Policy (co-teach with Norman Sadeh).</li>
-     <li>14-760: Advanced Networking.</li>
-     <li>14-990: Network Security Engineering- Analytics & Automation</li>
-     <li>14-850: INSuRE Cybersecurity Research.</li>
-   </ul>
+   <p class="newline">
+17-765: Deep Reinforcement Learning for Autonomous Self-Adaptive Systems*
+
+17-631: Information Security, Privacy & Policy (co-teach with Norman Sadeh)*.
+
+14-760: Advanced Networking*
+
+14-990: Network Security Engineering- Analytics & Automation*.
+
+14-850: INSuRE Cybersecurity Research.
+   </p>
  </section>
 
    <section id="unc">
