--- a/honors.html
+++ b/honors.html
@@ -25,11 +25,14 @@
   <!-- Honors Section -->
   <section>
     <ul>
+      <li>Distinguished Career Professor @ ECE/CMU</li>
       <li>Featured as DoD Subject Matter Expert in Cybersecurity Configuration Analytics and Automation, 2011.</li>
       <li>Received IBM Research Faculty Award, 2013.</li>
       <li>Faculty Research University Award at UNC Charlotte, 2014.</li>
       <li>ACM and IEEE Distinguished Service Professional Awards (multiple years).</li>
       <li>Old Dominion University Distinguished Alumni Award, 2003.</li>
       <li>NASA Scholarship during PhD, 1995–1998.</li>
+      <li>Best Paper Awards: IM 203, Policy 2009,  DSAA 2021,  DBSec 2025, DBSec 2023.</li>
+      <li>Received ACM and IEEE Distinguished Service Professional Awards in 2009 and 2010.</li>
     </ul>
   </section>
